# contextualshap

./: .gitignore  README.md  dice.ipynb  pyproject.toml
src/contextualshap/: common.py  gpt.py  plots.py
tests/: test_plots.py
